--- a/config/database.yml
+++ b/config/database.yml
@@ -88,3 +88,13 @@ test:
   username: postgres
   password: superADD100
   timeout: 5000
+
+  production:
+  #Revised for AWS
+  adapter: postgresql
+  database: <%= ENV['RDS_DB_NAME'] %>
+  encoding: unicode
+  host: <%= ENV['RDS_HOSTNAME'] %>
+  password: <%= ENV['RDS_PASSWORD'] %>
+  port: <%= ENV['RDS_PORT'] %>
+  username: <%= ENV['RDS_USERNAME'] %>
