--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,10 +1,8 @@
 development:
-  adapter: async
+  adapter: postgresql
 
 test:
   adapter: async
 
 production:
-  adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: video_room_2_production
+  adapter: postgresql
