--- a/config/database.yml
+++ b/config/database.yml
@@ -4,25 +4,25 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
-# default: &default
-#   adapter: sqlite3
-#   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-#   timeout: 5000
+default: &default
+  adapter: sqlite3
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
 
-# development:
-#   <<: *default
-#   database: db/development.sqlite3
+development:
+  <<: *default
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-# test:
-#   <<: *default
-#   database: db/test.sqlite3
+test:
+  <<: *default
+  database: db/test.sqlite3
 
-# production:
-#   <<: *default
-#   database: db/production.sqlite3
+production:
+  <<: *default
+  database: db/production.sqlite3
 #Revised for AWS
   # adapter: postgresql
   # database: <%= ENV['RDS_DB_NAME'] %>
@@ -50,14 +50,14 @@
 # Configure Using Gemfile
 # gem 'pg'
 #
-development:
-  adapter: postgresql
-  encoding: unicode
-  database: hyhyh_development
-  pool: 5
-  username: postgres
-  password: superADD100
-  timeout: 5000
+# development:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: hyhyh_development
+#   pool: 5
+#   username: postgres
+#   password: superADD100
+#   timeout: 5000
  
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -80,21 +80,21 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  adapter: postgresql
-  encoding: unicode
-  database: hyhyh_test
-  pool: 5
-  username: postgres
-  password: superADD100
-  timeout: 5000
+# test:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: hyhyh_test
+#   pool: 5
+#   username: postgres
+#   password: superADD100
+#   timeout: 5000
 
-production:
-  #Revised for AWS
-  adapter: postgresql
-  database: <%= ENV['RDS_DB_NAME'] %>
-  encoding: unicode
-  host: <%= ENV['RDS_HOSTNAME'] %>
-  password: <%= ENV['RDS_PASSWORD'] %>
-  port: <%= ENV['RDS_PORT'] %>
-  username: <%= ENV['RDS_USERNAME'] %>
+# production:
+#   #Revised for AWS
+#   adapter: postgresql
+#   database: <%= ENV['RDS_DB_NAME'] %>
+#   encoding: unicode
+#   host: <%= ENV['RDS_HOSTNAME'] %>
+#   password: <%= ENV['RDS_PASSWORD'] %>
+#   port: <%= ENV['RDS_PORT'] %>
+#   username: <%= ENV['RDS_USERNAME'] %>
