--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@
 .elasticbeanstalk/* 
 !.elasticbeanstalk/*.cfg.yml 
 !.elasticbeanstalk/*.global.yml
+
+# Ignore Gemfile.lock temporarily
+Gemfile.lock
