add worker connections

--- a/app/.ebextensions/nginx.config
+++ b/app/.ebextensions/nginx.config
@@ -3,9 +3,14 @@ files:
     content: |
       client_max_body_size 500M;
       server_names_hash_bucket_size 128;
+      worker_processes 16;  
 
       upstream backend {
         server unix:///var/run/puma/my_app.sock;
+      }
+
+      events {
+        worker_connections  4096;  ## Default: 1024
       }
 
       server {
